overlays/magi/shared/gateway/httproute-immich-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-redirect
  namespace: shared
spec:
  parentRefs:
    - name: shared-gateway
      sectionName: http
  hostnames:
    - photos.vbalex.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
